# BRISC-2025-Brain-Tumor-MRI-Segmentation-and-Classification

./: .gitignore  Dockerfile  README.md  project_v3.py  pyproject.toml  requirements.txt
scripts/: compare_backbones.py  infer_joint.py  infer_separate.py  train_joint.py  train_stage1.py  train_stage2.py
src/brisc2025/: pipeline.py
